--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.mvc.view.prefix=/static/
-spring.mvc.view.suffix=.html
+#spring.mvc.view.prefix=/static/
+#spring.mvc.view.suffix=.html
 
 # Azure
 azure.storage.container-name=library
